external-crates/move/crates/move-compiler/tests/move_check/naming/var_as_fun_invalid.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E04029]: invalid function call
  ┌─ tests/move_check/naming/var_as_fun_invalid.move:4:9
  │
4 │         var();
  │         ^^^ Unexpected invocation of parameter or local 'var'. Non-syntax variables cannot be invoked as functions
  │
  = Only macro syntax variables, e.g. '$var', may be invoked as functions.

error[E13001]: feature is not supported in specified edition
  ┌─ tests/move_check/naming/var_as_fun_invalid.move:4:9
  │
4 │         var();
  │         ^^^^^ lambda expressions are not supported by current edition 'legacy'; the '2024' edition supports this feature
  │
  = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.
